--- a/Homework6/Homework6.qmd
+++ b/Homework6/Homework6.qmd
@@ -33,7 +33,7 @@ Consider the awards.csv dataset in the Data folder that contains the following v
 
 a.  State the regression line for the distribution's natural parameter in the context of the problem.
 
-    $log(\hat{\lambda}) = \beta_0 + \beta_1 prog_{general} + \beta_2 prog_{vocational} + \beta3 math$
+    $log(\hat{\lambda}) = -4.1632 - 1.08386 prog_{general} + -0.71405 prog_{vocational} + 0.07015 math$
 
 ```{r}
 # using poisson bc awards is a count variable 
@@ -57,13 +57,11 @@ d.  Perform a formal hypothesis test to determine if your model in (a) is statis
 
     Reduced Model: $log(\hat{\lambda}) = \beta_0$
 
-    Full Model: $log(\hat{\lambda}) = \beta_0 = \beta_1 prog_{general} + \beta_2 prog_{vocational} + \beta_3 math$
+    Full Model: $log(\hat{\lambda}) = \beta_0 + \beta_1 prog_{general} + \beta_2 prog_{vocational} + \beta_3 math$
 
     $H_0 : B_j = 0 : j = 1, 2, 3, H_a : \exists B_j \neq 0 : j = 1, 2, 3$
 
-    $X^2 = 98.223, p = 3.747 \times 10^{-21} < \alpha = 0.05$ , we reject $H_0$ and conclude that a poisson regression model
-
-    predicting the expected number of awards a student has by the type of program a student is in and their math proficiency score is statistically significant.
+    $X^2 = 98.223, p = 3.747 \times 10^{-21} < \alpha = 0.05$ , we reject $H_0$ and conclude that a poisson regression model predicting the expected number of awards a student has by the type of program a student is in and their math proficiency score is statistically significant.
 
 ```{r}
 summary(mod)
@@ -83,21 +81,17 @@ e.  Perform a formal hypothesis test to determine if adding interaction terms be
 
     $H_0 : B_j = 0 : j = 4 , 5, H_a : \exists B_j \neq 0 : j = 4 , 5$
 
-    $p = 0.8403 > \alpha = 0.05$ , we fail to reject the null hypothesis and conclude adding interaction terms between program and math score is not statistically significant in our model predicting expected number of awards by program and math proficiency.
+    $X^2 = 0.348, p = 0.8403 > \alpha = 0.05$ , we fail to reject the null hypothesis and conclude adding interaction terms between program and math score is not statistically significant in our model predicting expected number of awards by program and math proficiency.
 
 ```{r}
 mod_int <- glm(num_awards ~ prog + math + prog:math, data = award, family = poisson)
-anova(mod_int, mod)
+anova(mod, mod_int)
 ```
 
 f.  Determine if the model you chose in (e) is a good fit for the data.
 
-    For homoscedasticity, our residual plot looks pretty bad so it is clearly violated, and for our BP test $p = 3.89e-05$ which violates the assumption, therefore we can conclude homoscedasticity is violated. For normality our residual plot doesn't deviate too far from the line but the results are not well distributed, to confirm the violation of normality I ran a KS test, and $p =2.189e-15$ , which proves our assumption of normality is violated. Therefore I will conclude that this model that was chosen is not a good fit for the data.
+    I chose the original model I made due to interaction terms not being statistically significant. For the original model, it is clear that this is not a good fit for the data with all the points being concentrated to the left side of the graph. To say the model is a good fit for the data we would like to see the points randomly scattered across the plot, that is not happening, therefore this model is not a good fit for the data.
 
 ```{r}
-plot(mod,1)
-plot(mod,2)
-library(lmtest)
-bptest(mod)
-ks.test(rstandard(mod), 'pnorm')
+plot(fitted(mod), residuals.glm(mod), type = 'pearson')
 ```
