--- a/Project Work/Project.qmd
+++ b/Project Work/Project.qmd
@@ -11,6 +11,7 @@ execute:
 ---
 
 let's see if there are any predictors for market value in FIFA22
+
 ```{r}
 library(tidyverse)
 
@@ -19,8 +20,8 @@ head(fifa)
 
 ```
 
+lets look at some columns
 
-lets look at some columns 
 ```{r}
 # ideas for things to predict market Value... Age, Nationality, Overall, Club, Preferred.Foot, Skill.Moves, Body.Type, Height, Wright, Crossing, Finishing, HeadingAccuracy, ShortPassing, Volleys, Dribbling, Curve, FKAccuracy, LongPassing, BallControl, Acceleration, SprintSpeed, Agility, Reactions, Balance, ShotPower, Jumping, Stamina, Strength, LongShots, Aggression, Interceptions, Positioning, Vision, Penalties, Composure, StandingTackle, SlidingTackle, DefensiveAwareness 
 
@@ -30,7 +31,9 @@ fifa_new <- fifa %>%
   select(Value, Age, Overall, Preferred.Foot, Skill.Moves, Height, Weight, Crossing, Finishing, HeadingAccuracy, ShortPassing, Volleys, Dribbling, Curve, FKAccuracy, LongPassing, BallControl, Acceleration, SprintSpeed, Agility, Reactions, Balance, ShotPower, Jumping, Stamina, Strength, LongShots, Aggression, Interceptions, Positioning, Vision, Penalties, Composure, StandingTackle, SlidingTackle, DefensiveAwareness
   )
 ```
-Let's clean some data first 
+
+Let's clean some data first
+
 ```{r}
 fifa_clean <- fifa_new %>%
   mutate(
@@ -52,7 +55,9 @@ fifa_clean <- fifa_new %>%
   filter(!is.na(Value), is.finite(Value)) %>%
   na.omit()
 ```
-now lets see if it runs the model hahahah it runs 
+
+now lets see if it runs the model hahahah it runs
+
 ```{r}
 mod <- lm(Value ~ ., fifa_clean)
 
@@ -65,3 +70,9 @@ plot(mod)
 #weights or boxcox 
 ```
 
+```{r}
+summary(mod)
+plot(mod)
+
+#weights or boxcox
+```
