--- a/Project Work/Project.qmd
+++ b/Project Work/Project.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Project Work"
+title: "Final Project\nAugust Decz\nSTAT 408\nDr. Stuart "
 format: 
   html:
     self-contained: true
@@ -10,21 +10,23 @@ execute:
   include: true
 ---
 
-let's see if there are any predictors for market value in FIFA22
+### Introduction
+
+FIFA 23 is a soccer video game previously owned by Electronic Arts (EA), also known for famous titles such as Madden, NCAA, the Sims, and many more. I personally have been playing FIFA since 2012 when I was a kid, and have grown a strong affinity for its playstyle and frequent updates mimicking the current state of the soccer world. Each player in the game is created with many factors (other than graphical and animations) that determine their overall rating (e.g. Messi is a 90 overall but has 87 speed, 94 dribbling etc.), and how those ratings actually transfer to in game play usually determines market value. The FIFA market is a (mostly) completely open laissez-faire market where supply and demand run the show. Higher rated players (or more known players like Messi/Ronaldo) are worth more coins than lower rated players. For this project, I will analyze/determine how specific attributes that go into a player\'s FIFA card rating determine market value. Note that since the game is from over two years ago EA closes the open market down and final market values are unchangeable. 
+
+The dataset I found uses only base cards from the version of the game from 2023, I was unable to find a more recent dataset that has the proper columns to answer the questions I strive to answer. Using only base cards eliminates the factor of limited availability (as promo or special cards are harder to find or may have only been available for a select amount of time e.g. Team of the Year cards). The full dataset consists of 16710 observations (each observation is a base player card) and 65 variables describing the player including nationality, height, etc. Note that not all attributes for a player are included in determining the rating, typically statistics such as pace(speed), shooting, passing, dribbling, defense, and physicality are averaged to find a player\'s rating. However, having played FIFA for a long time I know that taller players are typically valued more (and other examples) so I will be including many different variables in my model to predict player market value. Our ultimate goal is to determine what player attributes best predict FIFA market value.
+
+1.  Loading in the dataset
 
 ```{r}
 library(tidyverse)
-
 fifa <- read.csv('FIFA22_official_data.csv')
 head(fifa)
-
 names(fifa)
 ```
 
-lets look at some columns
-
 ```{r}
-# --- CLEAN DATA ---
+# CLEAN DATA
 fifa_clean <- fifa %>% 
   dplyr::select(Value, Age, Overall, Preferred.Foot, Skill.Moves, Height, Weight,
          Crossing, Finishing, HeadingAccuracy, ShortPassing, Volleys,
@@ -33,8 +35,7 @@ fifa_clean <- fifa %>%
          ShotPower, Jumping, Stamina, Strength, LongShots, Aggression,
          Interceptions, Positioning, Vision, Penalties, Composure,
          StandingTackle, SlidingTackle, DefensiveAwareness) %>% 
-  
-  # ---- Convert Value strings ("€100M", "€80K") to numeric ----
+  # converting value strings to numerics and removing unit symbols (note: still in euros... virtual money so does not really matter)
   mutate(
     Value = gsub("€", "", Value),
     Value = case_when(
@@ -42,17 +43,21 @@ fifa_clean <- fifa %>%
       grepl("K", Value) ~ as.numeric(gsub("K", "", Value)) * 1e3,
       TRUE ~ as.numeric(Value)
     ),
-    
     Height = as.numeric(gsub("cm", "", Height)),
     Weight = as.numeric(gsub("kg", "", Weight))
   ) %>%
-  
-  # ---- Remove problematic rows ----
   filter(is.finite(Value), Value > 0) %>% 
   na.omit()
 ```
 
-now lets see if it runs the model hahahah it runs
+Summary Stats and Visual Exploration
+
+```{r}
+summary(fifa_clean)
+skimr::skim(fifa_clean)
+```
+
+now lets see if it runs the model
 
 ```{r}
 mod_initial <- lm(Value ~ ., fifa_clean)
@@ -61,13 +66,13 @@ plot(mod_initial,1)
 plot(mod_initial,2)
 ```
 
-extre;me heteroscedasticity and right skew of the normality plot
+Extreme heteroscedasticity and normality clearly violated.
 
-lets try a box cox to get things going
+lets try a box cox to see what kind of transformation we should do.
+
+$\lambda \approx -0.067$ SIX SEVEN (Imagine me doing the hand motion here)
 
 ```{r}
-
-# boxcox analysis to see if we should do a log transformation
 library(MASS)
 bc <- boxcox(mod_initial)
 lambda <- bc$x[which.max(bc$y)]
@@ -92,28 +97,30 @@ plot(mod_bc, 2)
 summary(mod_bc)
 ```
 
-Now lets do some weights
-
-```{r}
-res <- abs(residuals(mod_bc))
-w <- res^2
-mod_wls <- lm(Value_bc ~ ., 
-              data = fifa_clean %>% dplyr::select(-Value),
-              weights = w)
-plot(mod_wls, 1)
-plot(mod_wls, 2)
-```
-
-```{r}
-summary(mod_wls)
-```
-
-we have chosen mod_bc (log transformation as our model) bc the adjusted rsquared is better
+we have chosen mod_bc (log transformation as our model) bc the adjusted rsquared is much better now
 
 ```{r}
 diff_norm_log <- summary(mod_bc)$adj.r.squared - summary(mod_initial)$adj.r.squared
 diff_norm_log * 100
-
-diff_wts_log <- summary(mod_wls)$adj.r.squared - summary(mod_bc)$adj.r.squared
-diff_wts_log * 100
 ```
+
+```{r}
+library(car)
+vif(mod_bc)
+```
+
+stepwise model because we have multicollinearity
+
+```{r}
+step_mod <- step(mod_bc, method = 'backwards')
+```
+
+maybe include these interaction terms
+
+-   **Acceleration × SprintSpeed** (pace synergy)
+
+-   **Strength × Aggression** (physicality combo)
+
+-   **SkillMoves × Dribbling** (skill amplifies dribbling)
+
+-   **Height × Jumping** (aerial ability interaction)
